# data-finder-ts

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml  release.yml
example/: generate.py  generate_dual_assoc.py  generate_examples.py  generate_from_markdown.py  generate_self_ref.py  mappings.py
example/data/: accounts.csv  contractualpositions.csv  prices.csv  trades.csv
generator/src/ts_generator/: generator.py
generator/src/ts_generator/templates/: context_template.txt  finder_base_template.txt  finder_template.txt
src/: index.ts
src/datafinder/: attribute.ts  finder-registry.ts  finder.ts  graphql-runner.ts  index.ts  runner.ts  sql-generator.ts  typed-attributes.ts
src/model/: graphql_mapping.ts  milestoning.ts  relational.ts
tests/: dual-assoc.test.ts  duckdb-markdown.test.ts  duckdb-runner.ts  duckdb-self-ref.test.ts  duckdb.test.ts  graphql-mock-server.ts  graphql.test.ts  orgchart.test.ts  sql-operations.test.ts
tests/generated_self_ref/: EmployeeFinder.ts  EmployeeFinderBase.ts  SelfRefContext.ts
