[project]
name = "ts-generator"
version = "0.1.0"
description = "TypeScript finder generator for data-finder-ts"
requires-python = ">=3.11"
dependencies = [
    "data-finder[markdown]==0.1.13",
]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generator/src/ts_generator"]
